<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/xebia_white"
            android:fillViewport="true"
            android:padding="12dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/about_background"
        android:orientation="vertical"
        android:padding="10dp">

        <!-- About the cards (title) -->
        <TextView
            style="@style/AboutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_cards_title"/>

        <!-- About the cards (description) -->
        <TextView
            android:id="@+id/about_dialog_card_content"
            style="@style/AboutContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/about_cards_content"/>

        <!-- Get the cards (title) -->
        <TextView
            style="@style/AboutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_get_title"/>

        <!-- Get the cards (description) -->
        <TextView
            android:id="@+id/about_dialog_get_content"
            style="@style/AboutContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/about_get_content"/>

        <!-- About Xebia (title) -->
        <TextView
            style="@style/AboutTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_xebia_title"/>

        <!-- About Xebia (description) -->
        <TextView
            android:id="@+id/about_dialog_xebia_content"
            style="@style/AboutContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/about_xebia_content"/>

        <!-- Xebia logo -->
        <ImageView
            android:layout_width="195dp"
            android:layout_height="32dp"
            android:contentDescription="@string/about_xebia_logo_desc"
            android:src="@drawable/xebia_logo"/>
    </LinearLayout>
</ScrollView>
