<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- See card -->
    <item
        android:id="@+id/action_see_card"
        android:title="@string/menu_see_card"
        android:visible="false"
        app:showAsAction="ifRoom|withText"/>

    <!-- See details -->
    <item
        android:id="@+id/action_see_info"
        android:title="@string/menu_see_details"
        android:visible="false"
        app:showAsAction="ifRoom|withText"/>

    <!-- Share -->
    <item
        android:id="@+id/action_share"
        android:icon="@android:drawable/ic_menu_share"
        android:title="@string/menu_share"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
        app:showAsAction="ifRoom"/>
</menu>
